# tinygpt-instruct

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: tokenizer_train.py
src/tinygpt_instruct/: tokenizer.py  utils.py
tests/: test_tokenizer.py
