[project]
name = "tinygpt-instruct"
version = "0.1.0"
description = ""
authors = [
    {name = "avolxn",email = "vlad.eldashov2303@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)"
]

[tool.poetry]
packages = [{include = "tinygpt_instruct", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pre-commit = "^4.5.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
src = ["src", "scripts"]
extend-exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "S"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
